# BlueArchiveUID

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml
BlueArchiveUID/: version.py
BlueArchiveUID/bauid_etcimg/: __init__.py
BlueArchiveUID/bauid_guide/: __init__.py  alias.py  get_char.py  get_event.py  get_guide.py
BlueArchiveUID/bauid_help/: Help.json  __init__.py  get_help.py  help.json
BlueArchiveUID/bauid_info/: __init__.py  draw_user_info_pic.py
BlueArchiveUID/bauid_jjcwk/: __init__.py  bajjc_wk.py
BlueArchiveUID/bauid_raid/: __init__.py  get_rank_data.py
BlueArchiveUID/bauid_ranklist/: __init__.py  draw_rank_pic.py
BlueArchiveUID/bauid_score/: __init__.py  bata_rtime_to_score.py  bata_score_to_time.py  bata_time_to_score.py  bata_utime_to_socre.py
BlueArchiveUID/bauid_startup/: main.py
BlueArchiveUID/bauid_user/: __init__.py
BlueArchiveUID/tools/: compress_image.py  crop_image.py  make_map.py
BlueArchiveUID/utils/: ba_api.py  ba_config.py  ba_map.py  download.py  download_resource.py  error_reply.py  resource_path.py
BlueArchiveUID/utils/alias/: alias_data.json  name_convert.py
BlueArchiveUID/utils/api/: api.py  models.py  request.py
BlueArchiveUID/utils/database/: models.py
BlueArchiveUID/utils/map/: equipId2Icon_map.json  equipid2icon_map.json  stageId2AreaNum_map.json  studentId2Name_map.json  studentId2Type_map.json  studentSkill2Icon_map.json  studentid2type_map.json  studentid2weaponIcon_map.json  studentid2weaponicon_map.json  studentskill2icon_map.json  weaponId2Nmae_map.json
